Fixing link wrapping issues from adding an extra link

--- a/source/assets/stylesheets/home.css.scss
+++ b/source/assets/stylesheets/home.css.scss
@@ -158,7 +158,7 @@ a {
   }
 
   @media screen and (min-width: 321px) and (max-width: $under-large-breakpoint) {
-    width:  305px;
+    width:  306px;
     margin: 0px auto;
   }
 
@@ -178,7 +178,7 @@ a {
 }
 
 .links .link a {
-  padding:   10px;
+  padding:   8px;
   color:     hsla(37,7%,79%,1);
   font-size: 16px;
 
